5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4181/executions/1764_672.log
== SUBMITION (2019-05-23 16:24:18) 
-- CODE:
# Não se esqueça de incluir o módulo
from numpy import
N = int(input("numero inteiro")) 
vetor =  ones(n, dtype=int)
print(vetor)
-- EXECUTION TIME:
0.126818
-- ERROR:
  File "/home/codebench/codes/1764/672/main.py", line 2
    from numpy import
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:24:53) 
-- CODE:
# Não se esqueça de incluir o módulo
from numpy import
N = int(input("numero inteiro")) 
vetor =  ones (n, dtype=int)
print(vetor)
-- ERROR:
File "XXXX", line 2
    from numpy import
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:25:02) 
-- CODE:
# Não se esqueça de incluir o módulo
from numpy import*
N = int(input("numero inteiro")) 
vetor =  ones (n, dtype=int)
print(vetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 16:25:04) 
-- CODE:
# Não se esqueça de incluir o módulo
from numpy import*
N = int(input("numero inteiro")) 
vetor =  ones (n, dtype=int)
print(vetor)
-- EXECUTION TIME:
0.487588
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/672/main.py", line 4, in <module>
    vetor =  ones (n, dtype=int)
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:25:05) 
-- CODE:
# Não se esqueça de incluir o módulo
from numpy import*
N = int(input("numero inteiro")) 
vetor =  ones (n, dtype=int)
print(vetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:25:06) 
-- CODE:
# Não se esqueça de incluir o módulo
from numpy import*
N = int(input("numero inteiro")) 
vetor =  ones (n, dtype=int)
print(vetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:25:06) 
-- CODE:
# Não se esqueça de incluir o módulo
from numpy import*
N = int(input("numero inteiro")) 
vetor =  ones (n, dtype=int)
print(vetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 16:25:07) 
-- CODE:
# Não se esqueça de incluir o módulo
from numpy import*
N = int(input("numero inteiro")) 
vetor =  ones (n, dtype=int)
print(vetor)
-- EXECUTION TIME:
1.00906
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/672/main.py", line 4, in <module>
    vetor =  ones (n, dtype=int)
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 16:25:08) 
-- CODE:
# Não se esqueça de incluir o módulo
from numpy import*
N = int(input("numero inteiro")) 
vetor =  ones (n, dtype=int)
print(vetor)
-- EXECUTION TIME:
0.985542
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/672/main.py", line 4, in <module>
    vetor =  ones (n, dtype=int)
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 16:25:09) 
-- CODE:
# Não se esqueça de incluir o módulo
from numpy import*
N = int(input("numero inteiro")) 
vetor =  ones (n, dtype=int)
print(vetor)
-- EXECUTION TIME:
1.46569
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/672/main.py", line 4, in <module>
    vetor =  ones (n, dtype=int)
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 16:25:10) 
-- CODE:
# Não se esqueça de incluir o módulo
from numpy import*
N = int(input("numero inteiro")) 
vetor =  ones (n, dtype=int)
print(vetor)
-- EXECUTION TIME:
2.92755
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/672/main.py", line 4, in <module>
    vetor =  ones (n, dtype=int)
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 16:25:10) 
-- CODE:
# Não se esqueça de incluir o módulo
from numpy import*
N = int(input("numero inteiro")) 
vetor =  ones (n, dtype=int)
print(vetor)
-- EXECUTION TIME:
2.78091
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/672/main.py", line 4, in <module>
    vetor =  ones (n, dtype=int)
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:25:11) 
-- CODE:
# Não se esqueça de incluir o módulo
from numpy import *
N = int(input("numero inteiro")) 
vetor =  ones (n, dtype=int)
print(vetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 16:25:12) 
-- CODE:
# Não se esqueça de incluir o módulo
from numpy import *
N = int(input("numero inteiro")) 
vetor =  ones (n, dtype=int)
print(vetor)
-- EXECUTION TIME:
0.763728
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/672/main.py", line 4, in <module>
    vetor =  ones (n, dtype=int)
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:25:14) 
-- CODE:
# Não se esqueça de incluir o módulo
from numpy import *
N = int(input("numero inteiro")) 
vetor =  ones (n, dtype=int)
print(vetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:25:23) 
-- CODE:
# Não se esqueça de incluir o módulo
from numpy import 
*
N = int(input("numero inteiro: ")) 
vetor =  ones (n, dtype=int)
print(vetor)
-- ERROR:
File "XXXX", line 2
    from numpy import 
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:25:28) 
-- CODE:
# Não se esqueça de incluir o módulo
from numpy import *
N = int(input("numero inteiro: ")) 
vetor =  ones (n, dtype=int)
print(vetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 16:26:07) 
-- CODE:
# Não se esqueça de incluir o módulo
from numpy import *
n =int(input("numero inteiro: ")) 
vetor =  ones (n, dtype=int)
print(vetor)
-- EXECUTION TIME:
0.422562
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:26:08) 
-- CODE:
# Não se esqueça de incluir o módulo
from numpy import *
n =int(input("numero inteiro: ")) 
vetor =  ones (n, dtype=int)
print(vetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
